# cascadecare-network-command

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CLAUDE_CODE_USAGE.md  CODING_AGENTS.md  CONTEXT.md  DEVIATIONS.md  GEMINI.md  LICENSE  Makefile  README.md  STRATEGY.md  pyproject.toml  tasks.md
.agent-os/: project.md  protected.txt
.agent-os/hooks/: check_env_example.py  pre-push  protect_files.py  protect_files_precommit.py  scan_secrets.py  security_scan.py
.agent-os/scripts/: bootstrap.py  checkpoint.py  db.py  init_db.py  log_decision.py  resume.py  save_session.py
.agent-os/security/: README.md  config.txt  install_hooks.sh  security_review.py  skill_router.py
.claude/: settings.json  settings.local.json
.claude-flow/: .trend-cache.json  CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/agents/: agent-prompt-author.md  bpmn-modeler.md  evidence-schema-author.md  mock-service-author.md
.claude/commands/: adversarial-review.md  architect.md  audit-ip-safety.md  debug.md  docs.md  finish-slice.md  polyskill.md  rehearse-demo.md  research.md  review.md  start-slice.md  sync-skills.md  tdd.md
.claude/polyskill-kit/: README.md
.cursor/rules/: content-quality.mdc  pr-review.mdc  skill-review.mdc  skill-structure.mdc  token-optimization.mdc
.gemini/commands/: generate-task.toml  test-coverage.toml
.github/: copilot-instructions.md
.github/workflows/: publish-maestro-case-kit.yml
.specify/: feature.json  integration.json
.specify/integrations/: claude.manifest.json  codex.manifest.json  copilot.manifest.json  cursor-agent.manifest.json  gemini.manifest.json  speckit.manifest.json  windsurf.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
agents/assess-claim-disruption/: agent.json  agent.py  entry-points.json  project.uiproj  pyproject.toml
agents/assess-claim-disruption/.agent-builder/: agent.json
agents/audit-ledger-writer/: agent.py  entry-points.json  project.uiproj  pyproject.toml
agents/audit-ledger-writer-langgraph/: agent.mermaid  agent.py  entry-points.json  project.uiproj  pyproject.toml  uipath.json
agents/baa-boundary-reasoner/: agent.json  bindings_v2.json
agents/case-job-janitor/: agent.py  entry-points.json  project.uiproj  pyproject.toml
agents/claim-flow-anomaly-detector/: agent.py  entry-points.json  project.uiproj  pyproject.toml
agents/claim-flow-anomaly-detector/evaluations/eval-sets/: claim-flow-anomaly-classification.json
agents/claim-flow-anomaly-detector/evaluations/evaluators/: evaluator-e5ee44dd.json
agents/classify-obligation/: agent.json  agent.py  entry-points.json  project.uiproj  pyproject.toml
agents/classify-obligation/.agent-builder/: agent.json  entry-points.json
agents/fiduciary-conflict-detector/: agent.json
agents/forensic-self-exam-agent/: agent.py  entry-points.json  project.uiproj  pyproject.toml
agents/forensic-self-exam-agent-langgraph/: .gitignore  agent.mermaid  agent.py  entry-points.json  langgraph.json  project.uiproj  pyproject.toml  uipath.json
agents/forensic-self-exam-agent/evaluations/eval-sets/: forensic-self-exam-vector-status.json
agents/forensic-self-exam-agent/evaluations/evaluators/: evaluator-f0e7e51c.json
agents/generate-audit-record/: agent.py  entry-points.json  project.uiproj  pyproject.toml
agents/multi-customer-pattern-detector/: agent.py  entry-points.json  project.uiproj  pyproject.toml  uipath.json
agents/multi-customer-pattern-detector/evaluations/eval-sets/: cross-provider-cascade-correlation.json
agents/multi-customer-pattern-detector/evaluations/evaluators/: evaluator-7a1c9f3e.json
agents/negligent-monitoring-risk-agent/: agent.json
agents/prompts/: assess_claim_disruption_agent.md  baa_boundary_reasoner.md  claim_flow_anomaly_detector.md  classify_obligation_agent.md  fiduciary_conflict_detector.md  forensic_self_exam_agent.md  multi_customer_pattern_detector.md  negligent_monitoring_risk_agent.md  vector_hypothesis_agent.md
agents/register-stakeholder/: agent.py  entry-points.json  project.uiproj  pyproject.toml
agents/vector-hypothesis-agent/: agent.json  entry-points.json
api_workflows/: README.md
api_workflows/counsel-hawthorne/: entry-points.json  main.json  project.uiproj
api_workflows/generate-audit-record/: entry-points.json  main.json  project.uiproj
api_workflows/insurer-aurora-specialty/: entry-points.json  main.json  project.uiproj
api_workflows/payer-apex/: entry-points.json  main.json  project.uiproj
api_workflows/payer-lakeshore/: entry-points.json  main.json  project.uiproj
api_workflows/provider-beta/: main.json  (+2 more)
apps/clearflow-network-command/backend/: dashboard.py  main.py  models.py  pyproject.toml
docs/: DEFERRED-FIXES.md  DEMO-RUNBOOK.md  MAESTRO-RETRY-CONFIG.md  architecture.md  changelog.md  overview.md  usage-examples.md
knowledge/: REQUIREMENTS.md  claude_code_bootstrap_prompt.md  healthcare-shockwave-build-brief.md  multi-vector-healthcare-cyber-crisis-prd.md
scripts/: add_audit_ledger_task.py  check-pending-polyskill.sh  cleanup_deployments.sh  demo_autocomplete.py  gen-lowcode-agent.py  gen_api_entry_points.py  gen_architecture_diagram.py  gen_cg_corpus.py  mark-polyskill-done.sh  merge-canvas-download.py  merge-child-grandchild.py  pack-solution.sh  populate_audit_ledger.py  render_architecture_png.sh  seed_data_fabric.py  seed_data_fabric.sh  setup-mcps.sh  sync-uipath-skills.sh
tooling/maestro-case-kit/: CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
tooling/maestro-case-kit/src/maestro_case_kit/: __init__.py  cli.py  contribution.py  knowledge.py  mcp_server.py  tools.py  validators.py
tooling/maestro-case-kit/src/maestro_case_kit/data/: knowledge.json
tooling/maestro-case-kit/tests/: test_check_cli.py  test_check_df.py  test_check_spawn.py  test_cli_explain.py  test_cli_lint.py  test_contribution.py  test_knowledge.py  test_mcp_server.py  test_tools.py  test_validators.py
(+336 files in other folders)
