[project]
name = "cascadecare-network-command"
version = "0.1.0"
description = "Healthcare financial shockwave orchestration — UiPath Maestro Case demonstration (Track 1, AgentHack 2026)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "uipath>=2.10.79",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "mypy>=1.12.0",
    "pre-commit>=4.6.0",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascadecare"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
exclude = [".agents/skills", ".github/skills", ".claude/skills", ".uipath-skills", "docs/archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL", "TRY", "FLY", "PERF", "RUF"]
ignore = ["S101", "TRY003", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
# Test assertion messages are intentionally long (full context for failures).
# S105/S106: synthetic credential fixtures in tests are not real secrets.
# S318: tests parse the repo's own (trusted) BPMN fixtures via minidom.
"tests/**" = ["E501", "S105", "S106", "S318"]

[tool.ruff.lint.isort]
known-first-party = ["cascadecare"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
markers = [
    "reversal: marks tests for specific demo reversals (e.g., reversal1, reversal2)",
    "integration: marks integration tests requiring external services",
    "slow: marks tests that take significant time",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",  # ✓ Current version
]
