[project]
name = "audit-ledger-writer-langgraph"
version = "0.2.1"
description = "Persists one immutable, detailed audit row per dispositioned obligation into the AuditRecord Data Fabric entity: a survey-ready compliance ledger that complements the Maestro Action History (CascadeCare Network Command). LangGraph coded agent."
authors = [{ name = "CascadeCare Network Command contributors" }]
requires-python = ">=3.12"
dependencies = [
    "uipath-langchain>=0.11",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "typing-extensions>=4.12",
    "pydantic>=2.0",
    "uipath>=2.10",
]

[dependency-groups]
dev = [
    "pytest>=8",
]
