[project]
name = "classify-obligation"
version = "0.1.0"
description = "Mock coded process: classifies a per-BAA/per-regulator obligation type, jurisdiction, and severity (CascadeCare obligation-grandchild Intake)."
authors = [{ name = "CascadeCare Network Command contributors" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "uipath>=2.10",
]

[dependency-groups]
dev = [
    "uipath-dev",
]

[tool.uipath]
type = "agent"
