[project]
name = "generate-audit-record"
version = "0.1.0"
description = "Mock coded process: produces an immutable audit-record reference for a filed obligation response (CascadeCare obligation-grandchild Response)."
authors = [{ name = "CascadeCare Network Command contributors" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "uipath>=2.10",
]

[dependency-groups]
dev = [
    "uipath-dev",
]

[tool.uipath]
type = "agent"
