[project]
name = "multi-customer-pattern-detector"
version = "0.1.0"
description = "Cross-provider correlation that emits the Reversal 1 cascade signal (CascadeCare Network Command, Slice 009)."
authors = [{ name = "CascadeCare Network Command contributors" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "uipath>=2.10",
]

[dependency-groups]
dev = [
    "uipath-dev",
]

[tool.uipath]
type = "agent"
