[project]
name = "register-stakeholder"
version = "0.1.0"
description = "Mock coded process: registers an affected provider stakeholder and pulls its BAA reference (CascadeCare stakeholder-parent Onboarding)."
authors = [{ name = "CascadeCare Network Command contributors" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "uipath>=2.10",
]

[dependency-groups]
dev = [
    "uipath-dev",
]

[tool.uipath]
type = "agent"
