[project]
name = "clearflow-network-command-backend"
version = "1.0.0"
description = "Coded App backend for ClearFlow Network Command narrative dashboard"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "uipath>=2",
]

[project.entry-points."uipath.coded_app"]
handler = "main:handler"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
